# eatshell

./: .gitignore  README.md  eatshell.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/: eatshell.py
